crates/sourcepawn-studio/tests/text_document/completion/snapshots/main__text_document__completion__variables__global_variable_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion/variables.rs
assertion_line: 7
expression: "complete(r#\"\n%! main.sp\nint foo;\n\n|\n^\"#, None)"
---
[
  {
    "label": "foo",
    "kind": 6,
    "detail": "int foo;",
    "deprecated": false,
    "sortText": "0",
    "insertTextFormat": 1
  }
]
