crates/sourcepawn-studio/tests/text_document/completion/snapshots/main__text_document__completion__variables__global_variable_circular_include_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion/variables.rs
assertion_line: 35
expression: "complete(r#\"\n%! foo.sp\n#include \"bar.sp\"\nint foo;\n%! bar.sp\n#include \"foo.sp\"\nint bar;\n\n|\n^\"#,\nNone)"
---
[]
