crates/sourcepawn-studio/tests/text_document/completion/snapshots/main__text_document__completion__variables__global_variable_include_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion/variables.rs
assertion_line: 20
expression: "complete(r#\"\n%! include/bar.sp\nint foo;\n%! main.sp\n#include \"include/bar.sp\"\n\n|\n^\"#,\nNone)"
---
[
  {
    "label": "foo",
    "kind": 6,
    "detail": "int foo;",
    "deprecated": false,
    "sortText": "0",
    "insertTextFormat": 1
  }
]
