crates/sourcepawn-studio/tests/text_document/completion/snapshots/main__text_document__completion__variables__local_variable_outside_function.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion/variables.rs
assertion_line: 127
expression: "complete(r#\"\n%! main.sp\nvoid main() {\n  int foo;\n}\n\n|\n^\n\"#, None)"
---
[
  {
    "label": "main",
    "kind": 3,
    "detail": "void main()",
    "deprecated": false,
    "sortText": "0.1",
    "insertTextFormat": 1
  }
]
